--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+      "build:ui": "cd ../NOTES/Frontend/ && rm -rf build && npm run build",
+      "deploy": "git push heroku main",
+      "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+      "logs:prod": "heroku logs --tail"
+ },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
