--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
 "scripts": {
       "build:ui": "cd ../NOTES/Frontend/ && rm -rf build && npm run build",
-      "deploy": "git push heroku main",
+      "deploy": "git push heroku master",
       "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
       "logs:prod": "heroku logs --tail"
  },
