--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-"scripts": {
+  "scripts": {
+    "start":"node index.js",
       "build:ui": "cd ../NOTES/Frontend/ && rm -rf build && npm run build",
       "deploy": "git push heroku master",
       "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
       "logs:prod": "heroku logs --tail"
- },
+  },
 
   "keywords": [],
   "author": "",
