--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js",
-      "build:ui": "cd ../NOTES/Frontend/ && rm -rf build && npm run build",
-      "deploy": "git push heroku master",
-      "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
-      "logs:prod": "heroku logs --tail"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build:ui": "cd ../NOTES/Frontend/ && rm -rf build && npm run build",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
-  "proxy":"http//localhost:3001",
-
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
-  },
   "devDependencies": {
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.1"
   }
 }
